Formatted text and added a shadow to the container, in addition to fixing overflowing content.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   background-color: hsl(47, 88%, 63%);
   font-family: 'Figtree', sans-serif;
   font-optical-sizing: auto;
+  margin-top: 60px;
 }
 
 .container{
@@ -17,12 +18,15 @@ body {
     place-items: center;
     border: 2px solid hsl(0, 0%, 7%);
     border-radius: 15px;
-    overflow: auto;
     background-color: white;
     margin: auto;
     width: 88vw;
     max-width: 350px;
     height: 500px;
+    overflow: hidden;
+    min-width: 350px;
+    min-height: 500px;
+    box-shadow: 10px 10px;
 }
 
 .content{
@@ -32,9 +36,10 @@ body {
 }
 
 #blogimg{
-    height: 170px;
+    height: 185px;
     border-radius: 15px;
     margin-top: 20px;
+    margin-bottom: -60px;
 }
 
 #tag{
@@ -42,15 +47,45 @@ body {
     border: 8px solid hsl(47, 88%, 63%);
     border-radius: 5px;
     display: inline-block;
+    margin-bottom: 12px;
 }
-
 
 .attribution { 
     font-size: 11px; 
     text-align: center; 
+    padding: 30px;
 }
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
 
+#date{
+    margin-top: auto;
+    font-size: 12px;
+}
+
+h2{
+    font-size: 20px;
+    cursor: pointer;
+}
+
+#content{
+    font-size: 15px;
+    color: hsl(0, 0%, 42%);
+}
+
+#authorimg{
+    height: 30px;
+    float: left;
+    margin-right: 10px;
+}
+
+#authorname{
+    font-size: 12px;
+    margin-top: 20px;
+}
+
+h2:hover{
+    color: hsl(47, 88%, 63%);
+}
